--- a/login/index.html
+++ b/login/index.html
@@ -497,7 +497,7 @@
 	<div id="homepage" style="width: 700px;" class="modal-content">
 	   <h2>USER PROFILE</h2><br><br><br>
 	   	<span style="font-weight:bole; font-size:14px">USER UID: <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
-        <span style="font-weight:bold;font-size:14px">EMAIL: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
+        <span style="font-weight:bold;font-size:14px">IDENTIFIER EMAIL: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL ACTIVATED: [ <span id="email_Verified"></span> ]</span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br>
 		<br><br>
 		<button style="width:auto !important; padding:10px; margin-left:0x; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
