--- a/login/index.html
+++ b/login/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LOGIN - BuanaNETPBun.Github.io</title>
+    <title>PROFILE - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik RouterOS Auto Backup to E-Mail Generator - BuanaNETPBun.Github.io' name='description'>
     <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
@@ -11,7 +11,7 @@
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
-      # LOGIN FORM BUANANETPBUN.GITHUB.IO
+      # POFILE FORM BUANANETPBUN.GITHUB.IO
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
