--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       word-wrap: break-word;
       margin:0;
       padding:0;
-	  color:#333;
+	  color:#111;
       }
-      h1, h2 {font-size: 50px; margin-bottom:0px; color:#333;display:inline;line-height:1.4;clear:both}
+      h1, h2 {font-size: 50px; margin-bottom:0px; color:#111;display:inline;line-height:1.4;clear:both}
       h3, h4, h5, h6{font-size: 20px; border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
@@ -587,7 +587,7 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!  - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a> - Search Engine for find all MikroTik RouterOS Script</p>
       <h3>// MIKROTIK SCRIPT GENERATOR BY BUANANET.PBUN</h3>
-      <b>☰ ROUTE + MANGLE</b>
+      <span style="font-size:18px;font-weight:bold">☰ ROUTE + MANGLE</span>
       <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing Per connection classifier (PCC) Script Generator or Script Maker for Mikrotik Routeros. - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker for Mikrotik Routeros - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/ecmp.html">Load Balancing ECMP Script Generator</a> - LB ECMP / Load Balancing Equal Cost Multi Path (ECMP) Script Generator or Script Maker for Mikrotik Routeros - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
@@ -599,30 +599,30 @@
       <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote IP Public Static For Secondary Gateway Mikrotik</a> - Simple Script how Remote IP Public Static For Secondary Gateway Mikrotik - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Game Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Port Game Routing Method)  - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Ip Address Game Routing Method) - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <div style="margin-top:15px"><b>☰ SIMPLE QUEUE + QUEUE TREE + QUEUE TYPE</b></div>
+      <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ SIMPLE QUEUE + QUEUE TREE + QUEUE TYPE</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a> - Simple MikroTik Burst Limit Calculator For RouterOS - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html">PCQ Burst Rate + Queue Size Calculator</a> - MikroTik PCQ Burst Rate + Queue Size Calculator For RouterOS - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator.html">Simple Queue Script Generator For Mikrotik + Tocken Bucket</a> - Simple Queue Script Generator or Script Maker For Mikrotik Plus Token Bucket - For IP Subnet /24 Only - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Simple Queue Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Queue Tree Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ Generator For Queue Tree And Queue Simple</a> - Mikrotik PCQ Generator For Queue Tree And Queue Simple, very easy - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <div style="margin-top:15px"><b>☰ HOTSPOT + PPPOE</b></div>
+      <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ HOTSPOT + PPPOE</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Generator</a> - Free Hotspot Wi-Fi QR Code Generator for MikroTik hotspot or wireless router only use WEP and WPA/WPA2 - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot Or Local Connections With Change TTL</a> - Mikrotik Block Sharing Hotspot Or Local Connections With Change TTL / Hotspot Anti Tethering  - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Hotspot Wizard Script Generator</a> - Make a easy with Mikrotik hotspot Wizard Generator tool for hotspot configuration with 3 step - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Username Password Hotspot Generator</a> - Mikrotik Create Username Password Hotspot Voucher Generator - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share For Hotspot Shared User Generator</a> - Mikrotik Bandwidth Share For Hotspot Shared User Generator - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <div style="margin-top:15px"><b>☰ DNS + NAT</b></div>
+      <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ DNS + NAT</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers Generator</a> - Mikrotik DNS over HTTPS (DoH) Server Script Generator - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding Script Generator</a> - MikroTik Port Forwarding Script Generator for RouterOS - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <div style="margin-top:15px"><b>☰ INTERFACE</b></div>
+      <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ INTERFACE</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation Script Generator</a> - Bonding is a technology that allows the aggregation of more than one ethernet interface and combine them into one virtual link so that we will get greater bandwidth throughput - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <div style="margin-top:15px"><b>☰ PROTECTION</b></div>
+      <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ PROTECTION</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning</a> - This tool works by manipulating some important information from Mikrotik and how to survive fortified with firewalls, ISPs or people outside the network who try to enter it will be difficult to recognize whether the router we are using is a vendor or not, this is because of random changes to the default MAC. through this tool and the host name that is usually known by the vendor through the default Mac Address will be difficult to trace. - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/advanced-mikrotik-protection.html">Advanced Mikrotik Router-OS Protection</a> - Complete script Advanced Mikrotik Router-OS Protection - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
-      <div style="margin-top:15px"><b>☰ OTHER TOOLS</b></div>
+      <div style="margin-top:15px"><span style="font-size:18px;font-weight:bold">☰ OTHER TOOLS</span></div>
       <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">LB PCC Calculation / Load Balancing PCC Calculation</a> - Simple LB PCC (Load Balancing Per Connection Classifier) Calculator - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch Monitoring To Telegram, Whatsapp, SMS, E-Mail</a> - Mikrotik Send Netwatch Monitoring To Telegram, Whatsapp, SMS, E-Mail Generator For RouterOS - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
       <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Website Script Generator</a> - Mikrotik Block Website Script Generator Use DNS, Layer-7, Filter or RAW Content, Filter or RAW TLS-Host, Address List and Web Proxy - <span style="color:green; font-weight:bold; font-size:10px"> ❌ member only</span></p>
