--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -265,17 +265,15 @@
       table, tr, td {
       border: none;
       }
-      @media screen and (max-width:768px) {
-            .main-wrap{
-      display: block 
-      }  
-      .sidebar,.content{border-radius:5px;display:block;width:100%}
-      .sidebar{height:auto;margin-bottom:5px}
+      @media screen and (max-width:768px) 	  {
+      .main-wrap{   display: block      }  
+      .sidebar,.content{border-radius:0px;display:block;width:100%}
+      .sidebar{height:auto;}
       .header h1{max-width:100%;justify-content:center}
       .logo-left a{margin-top:10px!important;font-size:25x}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
-      .mymenu{width:98%!important;}
+      .mymenu{width:100% !important;}
       .logo{width:100%}
       .logo-left{justify-content:center;display:flex;width:100%}
       .logo-right{justify-content:center;width:100%;display:flex}
@@ -288,13 +286,13 @@
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
       .sidebar{padding:10px}
-      #wrap{padding:5px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	  .mymenu{width:100% !important;}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       }
