--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -37,8 +37,8 @@
       #wrap{max-width:750px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:0;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{background-color:#f60}
-      .content{float:left;width:100%;height:auto;padding:10px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
-      .sidebar{float:left;width:100%;height:auto;padding:10px;background-color:#ccc;border:2px solid #ccc;border-radius:5px}
+      .content{float:left;width:100%;height:auto;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
+      .sidebar{float:left;width:100%;height:auto;padding:15px;background-color:#ccc;border:2px solid #ccc;border-radius:5px}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:20px;margin-bottom:10px;margin-top:10px}
@@ -55,7 +55,7 @@
       input[type=submit]{background-color:#f60;color:#fff;padding:3px;border:none;border-radius:5px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
-      .list-output-content{height:auto;min-height:300px;background:#f9f9f9;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:15px;margin-bottom:10px;border:1px solid #bbb;border-radius:5px;white-space:nowrap;font-size:14px}
+      .list-output-content{height:auto;min-height:300px;background:#f9f9f9;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:15px;border:1px solid #bbb;border-radius:5px;white-space:nowrap;font-size:14px}
       table,tr,td{border:none}
       table{border-collapse:collapse;width:100%}
       td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:400}
@@ -67,7 +67,7 @@
       .input-menu{display:block}
       .list-output-content{height:auto; min-height:300px}
       .main-wrap{display:block}
-      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar,.content{border-radius:5px;display:block;width:100%; padding:10px}
       .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
@@ -92,6 +92,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+      .sidebar,.content{padding:5px}		  
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       }
@@ -172,7 +173,7 @@
             <input  type="text" id="last-regexp" style='color: green;' placeholder="" value="$">
           </div>
         </div>
-        <div class="list-output-content" style="margin-bottom:10px">
+        <div class="list-output-content">
           <div id="cont"></div>
           <br>
           <table id="mytable" style="font-weight:normal">
