--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       ----------------------------------------------- */  
       body{background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:15px;line-height:normal;word-wrap:break-word;margin:0;padding:0;color:#292929}
       h1{font-size:52px;color:#292929;font-weight:600;line-height:1.3;margin:0}
-      h2{font-weight:bold;font-size:19px;color:#292929;border-bottom:1px solid #ccc;margin-bottom:6px;padding-bottom:3px}
+      h2{font-weight:600;font-size:21px;color:#292929;border-bottom:1px solid #ccc;margin-bottom:6px;padding-bottom:3px}
       h3,h4,h5,h6{font-weight:400;font-size:17px;color:#292929;margin-bottom:10px;padding-bottom:10px}
       pre{white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;white-space:pre-wrap;word-wrap:break-word}
       b{font-size:15px}
@@ -143,14 +143,14 @@
       .terminal img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
       @media screen and (max-width:1024px) {
       h1{font-size:45px}
-	  h2{font-size:19px}
+	  h2{font-size:20px}
       .logo-left a{font-size:21px}
       }
       @media screen and (max-width:768px) {
       .logo-left a{margin-top:5px!important;font-size:20px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:40px}
-	  h2{font-size:18px}
+	  h2{font-size:19px}
       .content{width:100%!important;padding:15px}
       .mymenu{width:100%!important}
       .logo{width:100%}
@@ -170,7 +170,7 @@
       .show-login-menu{display:flex;justify-content:center;width:100%;margin-bottom:10px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       h1{font-size:30px}
-	  h2{font-size:17px}
+	  h2{font-size:18px;}
       .gsc-search-box{display:none!important}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .mymenu{padding-left:0;padding-right:0}
@@ -178,6 +178,7 @@
       }
       @media screen and (max-width:500px) {
 	  h1{font-size:25px}
+	  h2{font-size:17px;}
       .hide-homepage{display:none}
       }
       @media print {
@@ -261,7 +262,7 @@
           </div>
         </div>
         <h2>// MIKROTIK ROUTEROS SCRIPT GENERATOR</h2>
-        <span style="font-size:16px;font-weight:bold;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
+        <span style="font-size:16px;font-weight:600;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
@@ -280,7 +281,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:bold; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
@@ -293,7 +294,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree or Queue Simple</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
@@ -306,7 +307,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot + PPPoE</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
@@ -316,7 +317,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard from ISP</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
@@ -328,7 +329,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ ROUTER-OS OTHER TOOLS</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ ROUTER-OS OTHER TOOLS</span></div>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><img class="member-only" title="Free for member only" src="./img/user.png"></p>
